feat: colored text